# ncs-experiment

./: .dockerignore  .gitignore  Dockerfile  compiler.py  main.py  pyproject.toml  run-docker.sh  translator.py
